--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1,4 +1,4 @@
-@import url(//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css);
+@import url(font-awesome.min.css);
 @import url(//fonts.googleapis.com/css?family=Raleway:400,300,500,600,800,700);
 @import "animate.css";
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
